# spectrum-pipeline

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
calibdb/: calibfile.txt
docs/: spectrum-pipeline-logo.key
espectro/: db.py  params.py  pipeline_lib.py  product_plots.py  products.py  spectrum_params.yaml  utils.py  version.py
scripts/: echarpe_pipeline.py  steles_pipeline.py
test/: teste.py
