[project]
name = "spectrum-pipeline"
authors = [
    {name = "Eder Martioli", email = "emartioli@lna.br"},
    {name = "Felipe Navarete", email = "fnavarete@lna.br"},
]
description = "An astronomical spectroscopic data reduction package"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["astronomy", "pipeline", "data reduction", "spectroscopy",
            "echelle", "image processing", "radial velocity", "abundances"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version>="3.8"',
    "astropy",
    "astropop",
    "numpy",
    "matplotlib",
    "pyyaml",
    "scipy",
    "uncertainties",
]
dynamic = ["version"]

[tool.setuptools]
packages = ['espectro']

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

